--- a/public/templates.html
+++ b/public/templates.html
@@ -13,6 +13,7 @@
 
 
   <script type="text/ng-template" id="/todos.html">
+  <h2>Todos</h2>
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="todo in todos">
         <input type="checkbox" ng-model="todo.completed">{{todo.name}}
